Update DreamOverlayService to work with Headless System User Mode.
The DreamOverlayService must run as part of the system user SystemUI
instance as the user-specific instance only has secondary components
enabled. As a result, the added overlay window must be set to show
for all users.

Test: atest DreamOverlayServiceTest#testSystemFlagShowForAllUsersSetOnWindow
Test: manual - verified overlay appears when dream shown in HSUM
Fixes: 283486171
Change-Id: I14d3335cb0d2a78780258300737f5d0dbe8d97e1

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -817,7 +817,8 @@
         <service
             android:name=".dreams.DreamOverlayService"
             android:enabled="false"
-            android:exported="true" />
+            android:exported="true"
+            android:singleUser="true" />
 
         <activity android:name=".keyguard.WorkLockActivity"
                   android:label="@string/accessibility_desc_work_lock"
